--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -78,12 +78,25 @@ jobs:
           commit_user_email: ${{ steps.author.outputs.email }}
           commit_message: ${{ steps.author.outputs.msg }}
           push_options: '--force-with-lease'
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Detect latest cached Ruby
+        run: |
+          if [ -d "/opt/hostedtoolcache/Ruby" ] && \
+             LATEST_RUBY=$(ls -d /opt/hostedtoolcache/Ruby/* | \
+                           grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | \
+                           sort -V | tail -1 | xargs basename) && \
+             [ -n "$LATEST_RUBY" ]; then
+            echo "LATEST_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_ENV
+            echo "Latest cached Ruby: $LATEST_RUBY"
+          else
+            echo "No suitable cached Ruby found; falling back to 'ruby'."
+            echo "LATEST_RUBY_VERSION=ruby" >> $GITHUB_ENV
+          fi
+      
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 'ruby' # Not needed with a `.ruby-version` or `.tool-versions`
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+          ruby-version: ${{ env.LATEST_RUBY_VERSION }}
+          bundler-cache: true
+          cache-version: 0
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
@@ -126,12 +139,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Detect latest cached Ruby
+        run: |
+          if [ -d "/opt/hostedtoolcache/Ruby" ]; then
+            LATEST_RUBY=$(ls -d /opt/hostedtoolcache/Ruby/*/x64/bin \
+              | awk -F/ '{print $5}' \
+              | sort -V \
+              | tail -1)
+
+            echo "LATEST_RUBY_VERSION=$LATEST_RUBY" >> $GITHUB_ENV
+            echo "Latest cached Ruby: $LATEST_RUBY"
+          else
+            echo "No cached Ruby found; falling back to 'ruby'."
+            echo "LATEST_RUBY_VERSION=ruby" >> $GITHUB_ENV
+          fi
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 'ruby' # Not needed with a `.ruby-version` or `.tool-versions`
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+          ruby-version: ${{ env.LATEST_RUBY_VERSION }}
+          bundler-cache: true
+          cache-version: 0
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
