--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,6 +16,7 @@ on:
       - '*.txt'
       - '*.json'
       - .github/workflows/jekyll.yml
+      - '*.png'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
